@@ -23,7 +23,7 @@ workflow = msys2-mingw
 [Author::Plicease::Core]
 
 [Prereqs]
-Alien::Build = 1.63
+Alien::Build = 2.39
 
 [Author::Plicease::Upload]
 cpan = 1
