@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - This plugin now requires Alien::Build of at least 2.39.
 
 0.07      2021-05-15 14:28:23 -0600
   - Optionally use GitHub Personall Access Token when specified as
